syntax = "proto3";
package com.example.grpc;

//指定生成的服务源码的文件名称，否则为GreetingServiceOuterClass
option java_outer_classname = "GreetingServiceClass1";
//HelloRequest、HelloResponse和GreetingService文件分开，生成多个文件
option java_multiple_files = true;

// Request payload
message HelloRequest1 {
  // Each message attribute is strongly typed.
  // You also must assign a "tag" number.
  // Each tag number is unique within the message.
  string name = 1;

  // This defines a strongly typed list of String
  repeated string hobbies = 2;

  // There are many more basics types, like Enum, Map
  // See https://developers.google.com/protocol-buffers/docs/proto3
  // for more information.
}

message HelloResponse1 {
  string greeting = 1;
}

// Defining a Service, a Service can have multiple RPC operations
service GreetingService1 {
  // Define a RPC operation
  rpc greeting1(HelloRequest1) returns (HelloResponse1);
}